--- a/docs/_source/tutorials/notebooks/labelling-textclassification-sentence-transformers-semantic.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-sentence-transformers-semantic.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "- 💾 use sentence transformers to generate embeddings of a dataset with banking customer requests\n",
     "- 🙃 upload the dataset into Argilla for data labeling\n",
-    "- 🏷 use the similarity search feature to efficiently find an label bulks of semantically-related examples\n",
+    "- 🏷 use the similarity search feature to efficiently find label bulks of semantically-related examples\n",
     "\n",
     "<img src=\"../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/4.png\" alt=\"Similarity search\" style=\"width: 1100px;\">"
    ]
@@ -25,7 +25,7 @@
     "\n",
     "In this tutorial, we'll use the power of embeddings to make data labeling (and curation) more efficient. The idea of exploiting embeddings for labeling is not new, and there are several cool, standalone libraries to label data using embeddings.\n",
     "\n",
-    "Since `1.2.0`, Argilla gives you a way to leverage embedding-based similarity together with all other workflows already provided: search-based bulk labeling, programmatic labeling using search queries, model pre-annotation, and human-in-the-loop workflows. This also means you can combine keyword search and filters with this new similarity search feature. All these without any vendor or model lock-in, you can use ANY embedding or encoding method, including but not limited to `Sentence Transformers`, `OpenAI`, or `Co:here`. If you want a deep-dive, you can check the [Semantic similarity deep-dive](../../guides/features/semantic-search.ipynb), but this tutorial will show you the basics to get started. \n",
+    "Starting from the version `1.2.0`, Argilla gives you a way to leverage embedding-based similarity together with all other workflows already provided: search-based bulk labeling, programmatic labeling using search queries, model pre-annotation, and human-in-the-loop workflows. This also means you can combine keyword searches and filters with this new similarity search feature. Without any vendor or model lock-in, you can use ANY embedding or encoding method, including but not limited to `Sentence Transformers`, `OpenAI`, or `Co:here`. If you want a deep-dive, you can check the [Semantic similarity deep-dive](../../practical_guides/annotation_workflows/semantic_search.ipynb), but this tutorial will show you the basics to get started. \n",
     "\n",
     "Let's do it!"
    ]
@@ -279,7 +279,7 @@
    "source": [
     "## 🙃 Upload dataset into Argilla\n",
     "\n",
-    "The original `banking77` dataset is a intent classification dataset with dozens of labels (`lost_card`, `card_arrival`, etc.). To keep this tutorial simple, we define a simplified labeling scheme with higher level classes: `[\"change_details\", \"card\", \"atm\", \"top_up\", \"balance\", \"transfer\", \"exchange_rate\", \"pin\"]`.\n",
+    "The original `banking77` dataset is an intent classification dataset with dozens of labels (`lost_card`, `card_arrival`, etc.). To keep this tutorial simple, we define a simplified labeling scheme with higher level classes: `[\"change_details\", \"card\", \"atm\", \"top_up\", \"balance\", \"transfer\", \"exchange_rate\", \"pin\"]`.\n",
     "\n",
     "Let's define the dataset settings, configure the dataset, and upload our dataset with vectors."
    ]
@@ -313,10 +313,10 @@
    "source": [
     "## 🏷 Bulk labeling with the `find similar` action\n",
     "\n",
-    "Now that our `banking77-topics` is available from the Argilla UI. We can start annotating our data leveraging semantic similarity search. The workflow is following:\n",
+    "Now that our `banking77-topics` is available from the Argilla UI. We can start annotating our data leveraging semantic similarity search. The workflow is as follows:\n",
     "\n",
     "1. Label a record (e.g., \"Change my information\" with the label `change_details`) and then click on Find similar on the top-right of your record.\n",
-    "2. As a result, you'll get to a list of the most similar record sorted by similarity (on descending order).\n",
+    "2. As a result, you'll get to a list of the most similar records sorted by similarity (in descending order).\n",
     "3. You can now review the records and assign either the `change_details` label or any other. For our use case, we see that most of the suggested records fall into the same category.\n",
     "\n",
     "\n",
@@ -332,7 +332,7 @@
     "\n",
     "### Find similar\n",
     "\n",
-    "As a result you'll get a list the 50 most similar records. \n",
+    "As a result, you'll get a list of the 50 most similar records. \n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
@@ -344,23 +344,23 @@
     "\n",
     "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/4.png)\n",
     "\n",
-    "As you can see the model is effectively capturing similar meaning without the need of explicit shared words: e.g., `details` vs `information`.\n",
+    "As you can see, the model is effectively capturing the similar meanings without any need for explicit shared words: e.g., `details` vs. `information`.\n",
     "\n",
     "### Review records\n",
-    "At this point, you can label the records one by one or scroll-down to review them before using the bulk-labeling button on the top of the records list.\n",
+    "At this point, you can label the records one by one or by scrolling down to review them before using the bulk-labeling button on the top of the records list.\n",
     "\n",
     "\n",
     "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/3.png)\n",
     "\n",
     "### Bulk label\n",
     "\n",
-    "For this tutorial, our labels are sufficiently fine-grained for the embeddings to group records that fall under the same topic. So in this case, it is safe to use the bulk labeling feature directly, effectively labeling 50 semantically-similar examples after a quick revision.\n",
+    "For this tutorial, our labels are sufficiently fine-grained for the embeddings to group records that fall under the same topic. So in this case, it is safe to use the bulk labeling feature directly, effectively labeling 50 semantically similar examples after a quick revision.\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
     "Warning\n",
     "\n",
-    "For other use cases, you might need to be more careful and combine this feature with search queries and filters. For quick experimentation, you can also assume you'll make some labelling errors and then use tools like `cleanlab` for detecting label errors.\n",
+    "For other use cases, you might need to be more careful and combine this feature with search queries and filters. For quick experimentation, you can also assume you'll make some labeling errors and then use tools like `cleanlab` for detecting label errors.\n",
     "</div>\n",
     "\n",
     "![labeling-textclassification-sentence-transformers-semantic](../../_static/tutorials/labelling-textclassification-sentence-transformers-semantic/2.png)\n",
