--- a/docs/_source/tutorials/notebooks/labelling-textclassification-sentencetransformers-semantic.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-sentencetransformers-semantic.ipynb
@@ -13,8 +13,8 @@
         "In this tutorial, we will work with multimodal data of images and text. It will walk you through the following steps:\n",
         "\n",
         "- Load a dataset with images and text of electronic products.\n",
-        "- Experiment with zero shot image and text classification.\n",
-        "- Label the data using the bulk labeling with image and text embeddings.\n",
+        "- Experiment with zero-shot image and text classification.\n",
+        "- Label the data using bulk labelling with image and text embeddings.\n",
         "- Train a SetFit classification model on the labelled data.\n",
         "\n",
         "<img src=\"../../_static/tutorials/labelling-textclassification-sentencetransformers-semantic/argilla_image_cables.png\" alt=\"Argilla with images tutorial\" style=\"width: 1100px;\">\n"
@@ -47,7 +47,7 @@
         "\n",
         "## Setup\n",
         "\n",
-        "For this tutorial, you'll need to install the Argilla client and a few third party libraries using `pip`:"
+        "For this tutorial, you'll need to install the Argilla client and a few third-party libraries using `pip`:"
       ]
     },
     {
@@ -59,9 +59,9 @@
       "source": [
         "## Introduction\n",
         "\n",
-        "__Real world multimodal data__ is often a mix of text and images. In this tutorial, we will work with a dataset of electronic products. The dataset contains images of the products and a description of the product. \n",
+        "__Real-world multimodal data__ is often a mix of text and images. In this tutorial, we will work with a dataset of electronic products. The dataset contains images of the products and a description of the product. \n",
         "\n",
-        "This notebook uses a dataset of electronics parts and products from a fictional electronics web shop. \n",
+        "This notebook uses a dataset of electronics parts and products from a fictional electronics webshop. \n",
         "\n",
         "Let's get started!"
       ]
@@ -161,7 +161,7 @@
         "id": "izZIHEzYNYnB"
       },
       "source": [
-        "## A 'real world' multimodal dataset\n",
+        "## A 'real-world' multimodal dataset\n",
         "\n",
         "The dataset samples contain a `page_name`, `page_descriptions`, and a `label`. The dataset is split into two parts: `labelled` and `unlabelled`. The labelled portion is the result of my annotation so we can test methods. In reality, let's say this doesn't exist 😏. "
       ]
@@ -336,7 +336,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 🔫 Zero Shot Classification"
+        "## 🔫 Zero-Shot Classification"
       ]
     },
     {
@@ -348,7 +348,7 @@
       "source": [
         "### 📷 Images\n",
         "\n",
-        "First, we will explore some zero shot techniques. For the sake of comparison, we will use the `labelled` portion of the dataset.\n"
+        "First, we will explore some zero-shot techniques. For the sake of comparison, we will use the `labelled` portion of the dataset.\n"
       ]
     },
     {
@@ -391,7 +391,7 @@
         "id": "FodfnkJgNYnE"
       },
       "source": [
-        "First, we can zero shot classify one image from the dataset: "
+        "First, we can zero-shot classify one image from the dataset: "
       ]
     },
     {
@@ -440,7 +440,7 @@
         "id": "vwkVzNhVNYnF"
       },
       "source": [
-        "Now we will test the accuracy and latency of a zero shot image classifier on a sub section of the `labelled` portion of the dataset."
+        "Now we will test the accuracy and latency of a zero-shot image classifier on a sub-section of the `labelled` portion of the dataset."
       ]
     },
     {
@@ -526,7 +526,7 @@
         "id": "sgnz7XtXNYnG"
       },
       "source": [
-        "😞 Zero shot image classification with a CLIP model gives an accuracy of **0.82** in just under **2 minutes** for only **20%** of the test data. This score is not impressive. Let's see if the text is more reliable."
+        "😞 Zero-shot image classification with a CLIP model gives an accuracy of **0.82** in just under **2 minutes** for only **20%** of the test data. This score is not impressive. Let's see if the text is more reliable."
       ]
     },
     {
@@ -537,7 +537,7 @@
       },
       "source": [
         "### 📚 Text\n",
-        "The product description and name also contain valuable information. Let's see what zero shot classification of those can achieve. "
+        "The product description and name also contain valuable information. Let's see what zero-shot classification of those can achieve. "
       ]
     },
     {
@@ -648,9 +648,9 @@
         "id": "IhAmyXNGNYnH"
       },
       "source": [
-        "😞 Text classification takes less time, but accuracy is also less at __.79__. This shows that some information is held in images that's not in the text. It would be great if we could consolidate this information. 🤞\n",
+        "😞 Text classification takes less time, but accuracy is also less at __.79__. This shows that some information is held in images that are not in the text. It would be great if we could consolidate this information. 🤞\n",
         "\n",
-        "Furthermore, both of these approaches use large language models that consume a significant amount of compute."
+        "Furthermore, both of these approaches use large language models that consume a significant amount of computation."
       ]
     },
     {
@@ -662,11 +662,11 @@
       "source": [
         "## Consolidate data labeling\n",
         "\n",
-        "The above scores from two zero shot classification approaches reveal that the task is possible but challenging using a zero shot approach. \n",
+        "The scores above from two zero-shot classification approaches reveal that the task is possible but challenging using a zero-shot approach. \n",
         "\n",
-        "With (our modified) Argilla, we can re-label the dataset and combine the information from image and text. Then, we can perform few shot learning on the dataset.\n",
+        "With (our modified) Argilla, we can re-label the dataset and combine the information from image and text. Then, we can perform few-shot learning on the dataset.\n",
         "\n",
-        "Spolier, this should give us a better score than the zero shot approaches, by combining information in image and text. Furthermore, our resulting language model should be lower latency than the zero shot models."
+        "Spoiler: this should give us a better score than the zero-shot approaches, by combining information in image and text. Furthermore, our resulting language model should have lower latency than the zero-shot models."
       ]
     },
     {
@@ -722,7 +722,7 @@
       "source": [
         "### 📚 Text\n",
         "\n",
-        "With Argilla, we can annotate samples using semantic search and the 'find similar' button. There's a complete tutorial on this [here](https://docs.argilla.io/en/latest/guides/label_records_with_semanticsearch.html). It requires the recently adding Similarity search features.\n",
+        "With Argilla, we can annotate samples using semantic search and the 'find similar' button. There's a complete tutorial on this [here](labelling-textclassification-sentence-transformers-semantic.ipynb). It requires the recently added Similarity search features.\n",
         "\n",
         "![Argilla with images tutorial](https://docs.argilla.io/en/latest/_static/reference/webapp/features-similaritysearch.png)\n",
         "\n"
@@ -843,7 +843,7 @@
         "\n",
         "We can now use our newly labelled dataset to train a classifier. We will use a SetFit model due to the limited sample count. Notice the significantly reduced inference time and increased accuracy. \n",
         "\n",
-        "A complete tutorial on few-shot classification with SetFit and Argilla can be found [here](https://docs.argilla.io/en/latest/guides/preannotate_with_fewshot_learning.html)."
+        "A complete tutorial on few-shot classification with SetFit and Argilla can be found [here](labelling-textclassification-setfit-zeroshot.ipynb)."
       ]
     },
     {
@@ -1012,7 +1012,7 @@
       "source": [
         "## Summary\n",
         "\n",
-        "In this tutorial, we learnt to bulk label a multi-modal dataset using a modified version of Argilla. We compared a few shot classifier trained on the bulk labelled dataset with zero shot classifiers of image and text. The results show that the few shot classifier is able to achieve a higher accuracy than the zero shot classifiers. Furthermore, the SetFit model is significantly faster than the zero shot classifiers.\n",
+        "In this tutorial, we have learned to bulk-label a multi-modal dataset using a modified version of Argilla. We compared a few-shot classifier trained on the bulk-labelled dataset with zero-shot classifiers of image and text. The results show that the few-shot classifier is able to achieve a higher accuracy than the zero-shot classifiers. Furthermore, the SetFit model is significantly faster than the zero-shot classifiers.\n",
         "\n",
         "This approach can be applied to classification tasks with limited data and can be used to train a classifier with minimal human effort.\n",
         "\n"
