typo, grammar and links fixes in tutorials

--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_text_classification_with_active_learning.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_text_classification_with_active_learning.ipynb
@@ -17,8 +17,8 @@
     "In this tutorial, you will learn how to set up a complete active learning loop with a [Hugging Face transformer](https://huggingface.co/docs/transformers/index):\n",
     "\n",
     " - Use the excellent [small-text](https://github.com/webis-de/small-text) library to set up your active learner;\n",
-    " - Use a [Argilla listener](/reference/python/python_listeners.html#python-listeners) to build and start an active learning loop;\n",
-    " - Use the [Argilla UI](/reference/webapp/features.html#annotate) to annotate examples and learn actively;\n",
+    " - Use a [Argilla listener](/../reference/python/python_listeners.html#python-listeners) to build and start an active learning loop;\n",
+    " - Use the [Argilla UI](/../reference/webapp/features.html#annotate) to annotate examples and learn actively;\n",
     "\n",
     "![training-textclassification-smalltext-activelearning](/_static/tutorials/training-textclassification-smalltext-activelearning/training-textclassification-smalltext-activelearning.png)"
    ]
@@ -42,7 +42,7 @@
     "*Active Learning* (AL) systems attempt to overcome this labeling bottleneck. \n",
     "The underlying idea is that not all data points are equally important for training the model. \n",
     "The AL system tries to query only the most relevant data from a pool of unlabeled data to be labeled by a so-called *oracle*, which is often a human annotator.\n",
-    "Therefore, AL systems are usually much more sample efficient and need far less training data than traditional supervised systems.\n",
+    "Therefore, AL systems are usually much more sample-efficient and need far less training data than traditional supervised systems.\n",
     "\n",
     "This tutorial will show you how to incorporate [Argilla](https://github.com/argilla-io/argilla) into an active learning workflow involving a human in the loop.\n",
     "We will build a simple text classifier by combining the active learning framework [small-text](https://github.com/webis-de/small-text) and Argilla. \n",
@@ -67,7 +67,7 @@
     "For details about configuring your deployment, check the [official Hugging Face Hub guide](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla).\n",
     "\n",
     "\n",
-    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](../../getting_started/quickstart.ipynb). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
+    "**Launch Argilla using Argilla's quickstart Docker image**: This is the recommended option if you want [Argilla running on your local machine](/../getting_started/quickstart_installation.html). Note that this option will only let you run the tutorial locally and not with an external notebook service.\n",
     "\n",
     "For more information on deployment options, please check the Deployment section of the documentation.\n",
     "\n",
@@ -78,7 +78,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -133,7 +133,7 @@
     "# Replace api_key if you configured a custom API key\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\"\n",
     ")"
    ]
   },
@@ -161,7 +161,7 @@
    "id": "baee4a2c-35f8-42d7-b750-7321df826baf",
    "metadata": {},
    "source": [
-    "We use the \"AG's News\" dataset for this demonstration. It consists of news articles which are categorized into four mutually exclusive classes.\n",
+    "We use the \"AG's News\" dataset for this demonstration. It consists of news articles that are categorized into four mutually exclusive classes.\n",
     "\n",
     "Let us load the dataset from the [Hugging Face Hub](https://huggingface.co/datasets):"
    ]
@@ -180,7 +180,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "# disables the progress bar for notebooks: https://github.com/huggingface/datasets/issues/2651\n",
+    "# Disables the progress bar for notebooks: https://github.com/huggingface/datasets/issues/2651\n",
     "datasets.logging.get_verbosity = lambda: logging.NOTSET\n",
     "\n",
     "raw_dataset = datasets.load_dataset('ag_news')\n",
@@ -318,7 +318,6 @@
     "# Fix seed for reproducibility\n",
     "np.random.seed(42)\n",
     "\n",
-    "\n",
     "# Number of samples in our queried batches\n",
     "NUM_SAMPLES = 20\n",
     "\n",
@@ -340,7 +339,7 @@
    "metadata": {},
    "source": [
     "With our active learner ready, it is time to teach it. \n",
-    "We first create a [Argilla dataset](../reference/webapp/dataset.md) to log and label the initial random batch queried by the active learner."
+    "We first create a [Argilla dataset](/../practical_guides/create_dataset.html) to log and label the initial random batch queried by the active learner."
    ]
   },
   {
@@ -357,11 +356,11 @@
     "# Choose a name for the dataset\n",
     "DATASET_NAME = \"trec_with_active_learning\"\n",
     "\n",
-    "# Define labeling schema\n",
+    "# Define the labeling schema\n",
     "labels = trec[\"train\"].features[\"coarse_label\"].names\n",
     "settings = rg.TextClassificationSettings(label_schema=labels)\n",
     "\n",
-    "# Create dataset with a label schema\n",
+    "# Create a dataset with a label schema\n",
     "rg.configure_dataset(name=DATASET_NAME, settings=settings)\n",
     "\n",
     "# Create records from the initial batch\n",
@@ -374,7 +373,7 @@
     "    for idx in initial_indices\n",
     "]\n",
     "\n",
-    "# Log initial records to Argilla\n",
+    "# Log the initial records to Argilla\n",
     "rg.log(records, DATASET_NAME)\n"
    ]
   },
@@ -384,9 +383,9 @@
    "metadata": {},
    "source": [
     "Before switching to the Argilla UI to label the records, we will set up the **active learning loop**. \n",
-    "For this, we will use the [listener decorator](../reference/python/python_listeners.rst#argilla.listeners.listener) from Argilla. \n",
+    "For this, we will use the [listener decorator](/reference/python/python_listeners.html#argilla.listeners.listener) from Argilla.\n",
     "The loop will run automatically once all records of a batch are labeled (see the `query` and `condition` argument of the decorator). \n",
-    "It will trigger the classifier's training, query a new batch from the active learner and log it to Argilla. \n",
+    "It will trigger the classifier's training, query a new batch from the active learner, and log it to Argilla. \n",
     "We will also keep track of the accuracy of the current classifier by evaluating it on our test set."
    ]
   },
@@ -419,7 +418,7 @@
     "\n",
     "    # initial update\n",
     "    print(\n",
-    "        \"Starting training! Depending on you device, this might take a while, so set up\"\n",
+    "        \"Starting training! Depending on your device, this might take a while, so set up\"\n",
     "        \" logging.\"\n",
     "    )\n",
     "    if ctx.query_params[\"batch_id\"] == 0:\n",
@@ -446,7 +445,7 @@
     "    # 3. Log the batch to Argilla\n",
     "    rg.log(new_records, DATASET_NAME)\n",
     "\n",
-    "    # 4. Evaluate current classifier on the test set\n",
+    "    # 4. Evaluate the current classifier on the test set\n",
     "    print(\"Evaluating current classifier ...\")\n",
     "    accuracy = accuracy_score(\n",
     "        dataset_test.y,\n",
@@ -492,11 +491,11 @@
    "metadata": {},
    "source": [
     "In the Argilla UI, we will set the number of records per page to 20 since it is also our chosen batch size. \n",
-    "Furthermore, we will use the [Status filter](../../reference/webapp/pages.html#filters) to filter out already annotated records. \n",
+    "Furthermore, we will use the [Status filter](/../reference/webapp/pages.html#filters) to filter out already annotated records. \n",
     "Now, all we have to do is to annotate the displayed records. \n",
     "Once annotating everything, the classifier's training will be automatically triggered.\n",
     "\n",
-    "After a few seconds, you should see the newly queried batch when pressing the [Refresh button](../../reference/webapp/pages.html#refresh). \n",
+    "After a few seconds, you should see the newly queried batch when pressing the [Refresh button](/../reference/webapp/pages.html#refresh). \n",
     "The training can take longer depending on your machine and whether you have a CUDA device. \n",
     "You can always check the status of the active learning loop from your notebook."
    ]
