integration review (second doc)

--- a/docs/_source/tutorials_and_integrations/integrations/process_documents_with_unstructured.ipynb
+++ b/docs/_source/tutorials_and_integrations/integrations/process_documents_with_unstructured.ipynb
@@ -6,9 +6,9 @@
    "id": "6bb44a8e",
    "metadata": {},
    "source": [
-    "# Large scale document processing for LLMs with Unstructured.io\n",
+    "# Large-scale document processing for LLMs with Unstructured.io\n",
     "\n",
-    "In this notebook, we'll show you how you can use the amazing library [unstructured](https://github.com/Unstructured-IO/unstructured) together with [argilla](https://github.com/argilla-io/argilla), and HuggingFace [transformers](https://github.com/huggingface/transformers) to train a custom summarization model. In this case, we're going to build a summarization model targeted at summarizing the [Institute for the Study of War's](https://www.understandingwar.org/) daily reports on the war in Ukraine. You can see an example of one of the reports [here](https://www.understandingwar.org/backgrounder/russian-offensive-campaign-assessment-december-12), and a screen shot appears below.\n",
+    "In this notebook, we'll show you how you can use the amazing library [unstructured](https://github.com/Unstructured-IO/unstructured) together with [argilla](https://github.com/argilla-io/argilla), and HuggingFace [transformers](https://github.com/huggingface/transformers) to train a custom summarization model. In this case, we're going to build a summarization model targeted at summarizing the [Institute for the Study of War's](https://www.understandingwar.org/) daily reports on the war in Ukraine. You can see an example of one of the reports [here](https://www.understandingwar.org/backgrounder/russian-offensive-campaign-assessment-december-12), and a screenshot appears below.\n",
     "\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
@@ -60,7 +60,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -230,7 +230,7 @@
    "id": "d2cd324b",
    "metadata": {},
    "source": [
-    "After partitioning the document, we'll extract the `Key Takeaways` section from the ISW reports, which is shown in the screenshot below. The `Key Takeaways` section will serve as the target text for our summarization model. While it would be time consuming the write HTML parsing code to find this content, with the `unstructured` library it is easy. Since the `partition_html` function breaks down the elements of the document into different categories like `Title`, `NarrativeText`, and `ListItem`, all we need to do is find the `Key Takeaways` title and then grab `ListItem` elements until the list ends. This logic is implemented in the `get_key_takeaways` function.\n",
+    "After partitioning the document, we'll extract the `Key Takeaways` section from the ISW reports, which is shown in the screenshot below. The `Key Takeaways` section will serve as the target text for our summarization model. While it would be time-consuming the write HTML parsing code to find this content, with the `unstructured` library it is easy. Since the `partition_html` function breaks down the elements of the document into different categories like `Title`, `NarrativeText`, and `ListItem`, all we need to do is find the `Key Takeaways` title and then grab `ListItem` elements until the list ends. This logic is implemented in the `get_key_takeaways` function.\n",
     "\n",
     "<img src=\"../../_static/tutorials/training-textgeneration-unstructured/isw-key-takeaways.png\" width=500 />"
    ]
@@ -295,7 +295,7 @@
    "id": "17aa2396",
    "metadata": {},
    "source": [
-    "Next we'll grab the narrative text from the document as input for our model. Again, this is easy with `unstructured` because the `partition_html` function already splits out the text. We'll just grab all of the `NarrativeText` elements that exceed a minimum length threshold. While we're in there, we'll also clean out the raw text for citations within the document, which isn't natural language and could impact the quality of our summarization model."
+    "Next, we'll grab the narrative text from the document as input for our model. Again, this is easy with `unstructured` because the `partition_html` function already splits out the text. We'll just grab all of the `NarrativeText` elements that exceed a minimum length threshold. While we're in there, we'll also clean out the raw text for citations within the document, which isn't natural language and could impact the quality of our summarization model."
    ]
   },
   {
@@ -335,7 +335,7 @@
     }
    ],
    "source": [
-    "# show a sample of narrative text\n",
+    "# Show a sample of narrative text\n",
     "print(get_narrative(elements).text[0:2000])"
    ]
   },
@@ -344,7 +344,7 @@
    "id": "cf47ebc3",
    "metadata": {},
    "source": [
-    "Now the we have everything set up, let's collect all of the reports! This step could take a while, we added a sleep call to the loop to avoid overwhelming ISW's webpage."
+    "Now we have everything set up, let's collect all of the reports! This step could take a while, so we added a sleep call to the loop to avoid overwhelming ISW's webpage."
    ]
   },
   {
@@ -591,7 +591,7 @@
    "source": [
     "## Section 3: Model Training with `transformers` <a id=\"training\"></a>\n",
     "\n",
-    "After refining our traning data in Argilla, we're ready to fine-tune our model using the `transformers` library. Luckily, `argilla` has a utility for converting datasets to a `dataset.Dataset`, which is the format required by the `transformers` `Trainer` object. In this example, we'll train a `t5-small` model to keep the runtime for the notebook reasonable. You can play around with larger models to get higher quality results."
+    "After refining our training data in Argilla, we're ready to fine-tune our model using the `transformers` library. Luckily, `argilla` has a utility for converting datasets to a `dataset.Dataset`, which is the format required by the `transformers` `Trainer` object. In this example, we'll train a `t5-small` model to keep the runtime for the notebook reasonable. You can play around with larger models to get higher-quality results."
    ]
   },
   {
